<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="viewModel"
            type="com.lavaira.checklistapp.view.fragment.registration.RegistrationViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="-7dp"
            android:background="@color/color_white"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorIndigo"
            app:progress_visibility="@{viewModel.loadingStatus}" />

        <TextView
            android:id="@+id/tvRegisrationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/register_screen_create_account"
            android:textColor="@color/colorDarkBlue"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipName"
            field_error="@{viewModel.firstNameFieldErrorValue}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRegisrationTitle"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_35sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_fullname"
                android:inputType="text"
                android:text="@={viewModel.firstNameField}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipLastName"
            field_error="@{viewModel.lastNameFieldErrorValue}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipName"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_35sdp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_lastname"
                android:inputType="text"
                android:text="@={viewModel.lastNameField}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipEmail"
            style="@style/TextInputStyle"
            field_error="@{viewModel.emailFieldErrorValue}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipLastName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.emailField}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tipAddress"
            style="@style/TextInputStyle"
            field_error="@{viewModel.addressFieldErrorValue}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tipEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_screen_address"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.addressField}" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLgoin"
            style="@style/BlueButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:onClick="@{()->viewModel.saveUserProfile()}"
            android:text="@string/register_screen_save" />


    </RelativeLayout>

</layout>